# tfg-secure-code-remediation

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py
app/models/: ai_explanation.py  finding.py  remediation.py
app/services/: analysis_service.py  findings_dedup.py  findings_loader.py  findings_mapper.py  pipeline_orchestrator.py  presentable_scan.py  project_scan_service.py  runtime_analysis_service.py  scan_result_store.py  web_analysis_flow.py
app/static/: report.css  web.css
app/templates/: analyze.html  base.html  dashboard.html  home.html  report.html  results.html
docs/: 00_scope.md  01_architecture_overview.md  01_findings_classification_mapping.md  01_methodology_and_planning.md  01_normalized_findings_model.md  01_roadmap_and_documentation_ritual.md  02_licenses_and_dependencies.md  day-01-summary.md
docs/02_decisions/: ADR-001-python.md  ADR-002-ai-assisted-roadmap.md  ADR-003-ai-explanations-design.md  ADR-004-web-v2-ux-redesign.md
docs/03_experiments/: bandit-initial-run.md  dashboard-web-analysis-console.md  findings-equivalence-grouping.md  fixtures-corpus-initial.md  pipeline-orchestrator.md  presentable-scan-json.md  real-project-scan-upload.md  semgrep-initial-run.md  unified-findings-loader.md
scripts/: run_bandit_fixtures.sh  run_semgrep_fixtures.sh
tests/: test_ai_cache.py  test_ai_enrichment.py  test_ai_factory.py  test_ai_ollama_provider.py  test_ai_presentable.py  test_ai_stub_provider.py  test_analysis_fixtures.py  test_bandit_parser.py  test_command_injection_remediator.py  test_command_injection_verifier.py  test_config.py  test_dashboard.py  test_dashboard_enrich_ai.py  test_evaluation_ground_truth.py  test_evaluation_metrics.py  test_findings_dedup.py  test_findings_loader.py  test_findings_mapper.py  test_flask_debug_remediator.py  test_flask_debug_verifier.py  test_health.py  test_local_path_hardening.py  test_mvp_autofix_verification_endpoint.py  test_normalized_finding.py  test_pipeline_orchestrator.py  test_presentable_scan.py  test_project_scan_service.py  test_requests_timeout_remediator.py  test_requests_timeout_verifier.py  test_run_fixtures_endpoint.py  test_runtime_analysis_service.py  test_scan_result_store.py  test_semgrep_parser.py  test_verify_false_remediator.py  test_verify_false_verifier.py  test_web_release_smoke.py  test_web_v2_phase3_ai.py  test_web_v2_phase4_results.py  test_web_v2_phase5_report.py  test_web_v2_routes.py  (+4 more)
(+104 files in other folders)
