[project]
name = "tfg-secure-code-remediation"
version = "0.1.0"
description = "Web app para análisis y remediación asistida por IA de vulnerabilidades en proyectos Python"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.bandit]
exclude_dirs = [".venv", "tests", "docs"]
