[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tfg-secure-code-remediation"
version = "0.1.0"
description = "Web app para análisis y remediación asistida por IA de vulnerabilidades en proyectos Python"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "httpx>=0.27",
    "bandit[toml]>=1.7",
    "semgrep>=1",
    "pre-commit>=3",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=85"

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [".venv", "reports", "fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI usa llamadas en defaults (File/Form/Query/Depends) como patrón idiomático.
extend-immutable-calls = [
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Query",
    "fastapi.Depends",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.bandit]
exclude_dirs = [".venv", "tests", "docs"]
